<resources>
    <string name="app_name">LibraryAdn</string>

    <string name="login_field_lastname">name</string>
    <string name="login_field_firstname">firstname</string>
    <string name="login_field_email">email</string>
    <string name="login_field_number">number</string>
    <string name="login_field_picture">picture</string>
    <string name="login_btn_login">Login</string>

    <string name="login_error">Please fill fields</string>
    <string name="login_success">You\'re login !!</string>

    <string name="picture_take_photo">Take a photo</string>
    <string name="picture_gallery">Go to gallery</string>

    <string name="cancel_action"> cancel</string>
</resources>
