<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_blue_light_1">

    <LinearLayout
        android:id="@+id/picture_layout_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/value_2"
        android:layout_marginTop="@dimen/value_1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_add_a_photo_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_take_photo"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/value_1"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/picture_layout_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/value_2"
        android:layout_marginTop="@dimen/value_1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_photo_library_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_gallery"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/value_1"/>
    </LinearLayout>

        <TextView
            android:id="@+id/picture_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_action"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/value_2"/>

</LinearLayout>